@@ -1,33 +1,41 @@
 ---
-title: Java 9 到 17 的语言特性更新
-date: 2021-12-04
+title: Java 9 到 21 的语言特性更新
+date: 2025-03-25
 tags:
   - backend
   - java
   - translation
 ---
 
-当 Java 8 引入流和 Lambda 这两个重大更新时，函数式编程风格赋予了 Java 更少模板代码的语法。虽然最近的版本更新没添加这么富有影响的特性，但带来了很多较小的改进。自从 Java 切换到一个更快的发布节奏后，每六个月就会发布一个新版本。记录类可能是最近更新中最重要的一个特性，模式匹配和封闭类也会让处理纯数据更容易。
+当 Java 8 引入流和 Lambda 这两个重大更新时，函数式编程风格赋予了 Java 更少模板代码的语法。自从 Java 切换到一个更快的发布节奏后，每六个月就会发布一个新版本。记录类可能是最近更新中最重要的一个特性，模式匹配和封闭类也会让处理纯数据更容易。
 
 ---
 
 > 本译文已获取作者许可后翻译、调整、发布。
 >
-> 原文：[New language features since Java 8 to 17（Enhancements to the Java language you should know）](https://advancedweb.hu/new-language-features-since-java-8)
+> 原文：[New language features since Java 8 to 21（Enhancements to the Java language you should know）](https://advancedweb.hu/new-language-features-since-java-8)
 >
 > 此外，Oracle 官方也有清单可供一览：[Java Language Changes](https://docs.oracle.com/en/java/javase/17/language/java-language-changes.html#GUID-6459681C-6881-45D8-B0DB-395D1BD6DB9B)
 
 
 ## 目录
 
+**Java 21** (LTS)
+
+- [switch 模式匹配](#Switch-模式匹配)
+- [记录模式 (Record Patterns)](#记录模式)
+- [匿名模式和匿名变量](#匿名模式和匿名变量) (预览特性 🔍)
+- [字符串模版](#字符串模版) (预览特性 🔍)
+- [匿名类和实例主方法](#匿名类和实例主方法) (预览特性 🔍)
+
 **Java 17** (LTS)
 
-- [封闭类](#封闭类)
-- [switch 模式匹配（预览特性🔍）](#switch-模式匹配（预览特性🔍）)
+- [封闭类 (Sealed Classes)](#封闭类)
+  - [提示：考虑使用封闭类而非枚举](#-提示：考虑使用封闭类而非枚举)
 
 **Java 16**
 
-- [记录类](#记录类)
+- [记录类 (Record Classes)](#记录类)
 - [instanceof 模式匹配](#instanceof-模式匹配)
 
 **Java 15**
@@ -51,8 +59,161 @@ tags:
 - [下划线不再是合法变量名](#下划线不再是合法变量名)
 - [改进的警告](#改进的警告)
 
-想要一览塑造这个新平台所有的 JEP[^1]，其涵盖了包括 API 、性能与安全方面的改进，参看这份[精选清单：Java 8 以来所有的改进](https://advancedweb.hu/a-categorized-list-of-all-java-and-jvm-features-since-jdk-8-to-15/)[^2]。
+想要一览塑造这个新平台所有的 JEP[^1]，其涵盖了包括 API 、性能与安全方面的改进，参看这份[精选清单：Java 8 以来所有的改进](https://advancedweb.hu/a-categorized-list-of-all-java-and-jvm-features-since-jdk-8)[^2]。
 
+
+## switch 模式匹配
+
+**开始支持版本：**[`JDK 21`](https://openjdk.java.net/jeps/441)  ( [`JDK 18`](https://openjdk.java.net/jeps/420)  [`JDK 19`](https://openjdk.java.net/jeps/427) [`JDK 20`](https://openjdk.java.net/jeps/433) 为预览特性)
+
+
+此前，`switch` 表达式的用法十分局限：条件仅仅支持完全相等的情况，而且只支持很少几类类型：数值、枚举类和字符串。
+
+这个预览特性增强了 `swith` 表达式的用法，**可以用在任意的类型上，匹配更复杂的模式**。
+
+这些新特性是**向后兼容的**，`switch` 搭配传统的常量就如以往一样的使用，例如和枚举值：
+
+```java
+var symbol = switch (expression) {
+  case ADDITION       -> "+";
+  case SUBTRACTION    -> "-";
+  case MULTIPLICATION -> "*";
+  case DIVISION       -> "/";
+};
+```
+
+然而，随着 [JEP 394: Pattern Matching for instanceof](https://openjdk.java.net/jeps/394) 的引入，现在可以和类型模式搭配使用：
+
+```java
+return switch (expression) {
+  case Addition expr       -> "+";
+  case Subtraction expr    -> "-";
+  case Multiplication expr -> "*";
+  case Division expr       -> "/";
+};
+```
+
+模式还支持**卫语句**[^3]，写法为`type pattern && guard expression`：
+
+```java
+String formatted = switch (o) {
+    case Integer i && i > 10 -> String.format("a large Integer %d", i);
+    case Integer i           -> String.format("a small Integer %d", i);
+    default                  -> "something else";
+};
+```
+
+这和使用 `if` 声明的类型模式构成了很好的对称性，因为类似的模式可以用于条件语句：
+
+```java
+if (o instanceof Integer i && i > 10) {
+  return String.format("a large Integer %d", i);
+} else if (o instanceof Integer i) {
+  return String.format("a large Integer %d", i);
+} else {
+  return "something else";
+}
+```
+
+与 `if` 条件类似，**模式变量的作用域是分支敏感的**（flow sensitive）。比如，在下面的条件中，变量 `i` 的作用域为卫语句及其右边的表达式。
+
+```java
+case Integer i && i > 10 -> String.format("a large Integer %d", i);
+```
+
+总体来说，模式匹配会按你期待的那样工作，但其中涉及了很多规则和边缘情况。如果你感兴趣，我推荐你读下相关的 JEPs 或是看下  [Pattern matching for instanceof](#instanceof-模式匹配)  章节。
+
+**Switch 现在也能匹配 `null` 值**。通常来说，当 `null` 值传给 `switch` 会报 `NullPointerException`。当一个常量试图匹配 `null` 的时候也会出现这种情况。然而，现在可以显示得声明 `null` 在分支上：
+
+```java
+switch (s) {
+  case null  -> System.out.println("Null");
+  case "Foo" -> System.out.println("Foo");
+  default    -> System.out.println("Something else");
+}
+```
+
+Switch 表达式需要是详尽的，也就是说，必须覆盖所有的可能的输入。这也同样适用于模式匹配，**当 `switch` 表达式没有完全覆盖各种情况分支，编译器会报错。**
+
+```java
+Object o = 1234;
+
+// OK
+String formatted = switch (o) {
+    case Integer i           -> String.format("a small Integer %d", i);
+    default                  -> "something else";
+};
+
+// 编译错误 - 'switch' 表达式没有涵盖所有可能的输入值
+// 因为 o 是 object 类型，加上 default case 可以修复
+String formatted = switch (o) {
+    case Integer i           -> String.format("a small Integer %d", i);
+};
+```
+
+此特性同**枚举，[封闭类](#封闭类)和泛性能很好的协作**。如果只有一组固定的分支存在，则可以省略默认分支。此外，此功能**在扩展域的时候对维护代码库的完整性有很大帮助**——例如，在枚举中有一个新的常量。由于完整性检查，所有缺失默认分支的 switch 的表达式都会产生编译器错误。这是[JEP](https://openjdk.java.net/jeps/441)中的另一个示例代码：
+
+```java
+sealed interface I<T> permits A, B {}
+final class A<X> implements I<String> {}
+final class B<Y> implements I<Y> {}
+
+static int testGenericSealedExhaustive(I<Integer> i) {
+    return switch (i) {
+        case B<Integer> bi -> 42;
+    };
+}
+```
+
+这段代码能通过编译是因为编译器可以检测到只有 `A` 和 `B` 是 `I` 的有效子类型，并且由于泛性参数 `Integer`，该参数只能是 `B<Integer>` 的实例。
+
+分支的详尽性**检查是在编译时**，但如果在运行时有新的实现（例如来自单独的编译），编译器还会插入一个默认分支去抛出 `MatchException`。
+
+编译器还执行与详尽性检查相反的操作：**当一个分支完全涵盖另一个分支时，会报出编译错误**。
+
+```java
+Object o = 1234;
+
+// 编译错误 - 第二个条件已包含在第一个条件分支中
+String formatted = switch (o) {
+    case Integer i           -> String.format("a small Integer %d", i);
+    case Integer i && i > 10 -> String.format("a large Integer %d", i);
+    default                  -> "something else";
+};
+```
+
+如果所有可能的类型都被处理，这允许默认分支能报出编译时错误。
+
+出于可读性的原因，编译器检查会**强制将常量分支放在相应基于类型的分支之前**。目标是始终先有更具体的分支条件。例如，以下代码片段中的分支，仅在以这个确切的顺序下有效。如果尝试重新排列，将收到编译错误。
+
+```java
+switch(num) {
+    case -1, 1 -> "special case";
+    case Integer i && i > 0 -> "positive number";
+    case Integer i -> "other integer";
+}
+```
+
+参考来源[^5]：
+- [Inside Java Podcast Episode 17 “Pattern Matching for switch” with Gavin Bierman](https://inside.java/2021/06/13/podcast-017/)
+- [Inside Java Podcast Episode 26: “Java 19 is Here!” with Brian Goetz and Ron Pressler](https://inside.java/2022/09/20/podcast-026/)
+- [Inside Java Podcast Episode 28: “Java Language - State of the Union” with Gavin Bierman](https://inside.java/2022/12/23/podcast-028/)
+
+
+## 记录模式
+TBD
+
+
+## 匿名模式和匿名变量
+TBD
+
+
+## 字符串模版
+TBD
+
+
+## 匿名类和实例主方法
+TBD
 
 
 ## 封闭类
@@ -151,7 +312,7 @@ public sealed class Shape {
 
 **被允许继承的类必须和父类（封闭类）在同一个包里**，如果是使用 java 模块，那它们必须在同一模块中。
 
-### ⚠️ 技巧：考虑使用封闭类优于枚举
+### ⚠️ 提示：考虑使用封闭类而非枚举
 
 在*封闭类*出现前，只能用*枚举类*对固定可选项建模，比如：
 
@@ -169,107 +330,6 @@ enum Expression {
 *封闭类*提供一个比*枚举类*更好的选择，使得用普通类来为固定可选项建模成为可能。当 *switch 模式匹配*在生产环境可用时就更能充分发挥其作用，*封闭类*能像枚举一样在 `switch` 表达式中使用，编译器能自动检查代码是否涵盖了全部情况。
 
 枚举类的值可以使用 `values` 方法列举出来。对应到封闭类和封闭接口，可以使用 `getPermittedSubclasses` 方法例举出所有被允许继承的子类。
-
-
-
-## switch 模式匹配（预览特性🔍）
-
-**开始支持版本：**[`JDK 17`](https://openjdk.java.net/jeps/406) 为预览特性
-
-此前，`switch` 表达式的用法十分局限：条件仅仅支持完全相等的情况，而且只支持很少几类类型：数值、枚举类和字符串。
-
-这个预览特性增强了 `swith` 表达式的用法，**可以用在任意的类型上，匹配更复杂的模式**。
-
-这些新特性是**向后兼容的**，`switch` 搭配传统的常量就如以往一样的使用，例如和枚举值：
-
-```java
-var symbol = switch (expression) {
-  case ADDITION       -> "+";
-  case SUBTRACTION    -> "-";
-  case MULTIPLICATION -> "*";
-  case DIVISION       -> "/";
-};
-```
-
-然而，随着 [JEP 394: Pattern Matching for instanceof](https://openjdk.java.net/jeps/394) 的引入，现在可以和类型模式搭配使用：
-
-```java
-return switch (expression) {
-  case Addition expr       -> "+";
-  case Subtraction expr    -> "-";
-  case Multiplication expr -> "*";
-  case Division expr       -> "/";
-};
-```
-
-模式还支持**卫语句**[^3]，写法为`type pattern && guard expression`：
-
-```java
-String formatted = switch (o) {
-    case Integer i && i > 10 -> String.format("a large Integer %d", i);
-    case Integer i           -> String.format("a small Integer %d", i);
-    default                  -> "something else";
-};
-```
-
-这和使用 `if` 声明的类型模式构成了很好的对称性，因为类似的模式可以用于条件语句：
-
-```java
-if (o instanceof Integer i && i > 10) {
-  return String.format("a large Integer %d", i);
-} else if (o instanceof Integer i) {
-  return String.format("a large Integer %d", i);
-} else {
-  return "something else";
-}
-```
-
-与 `if` 条件类似，**模式变量的作用域是分支敏感的**（flow sensitive）。比如，在下面的条件中，变量 `i` 的作用域为卫语句及其右边的表达式。
-
-```java
-case Integer i && i > 10 -> String.format("a large Integer %d", i);
-```
-
-总体来说，模式匹配会按你期待的那样工作，但其中涉及了很多规则和边缘情况。如果你感兴趣，我推荐你读下相关的 JEPs 或是看下  [Pattern matching for instanceof](#instanceof-模式匹配)  章节。
-
-**Switch 现在也能匹配 `null` 值**。通常来说，当 `null` 值传给 `switch` 会报 `NullPointerException`。当一个常量试图匹配 `null` 的时候也会出现这种情况。然而，现在可以显示得声明 `null` 在分支上：
-
-```java
-switch (s) {
-  case null  -> System.out.println("Null");
-  case "Foo" -> System.out.println("Foo");
-  default    -> System.out.println("Something else");
-}
-```
-
-**当 `switch` 表达式没有完全覆盖各种情况分支，或是一个分支条件完全包含了另一个分支，编译器会报错。**
-
-```java
-Object o = 1234;
-
-// OK
-String formatted = switch (o) {
-    case Integer i && i > 10 -> String.format("a large Integer %d", i);
-    case Integer i           -> String.format("a small Integer %d", i);
-    default                  -> "something else";
-};
-
-// 编译错误 - 'switch' 表达式没有涵盖所有可能的输入值
-String formatted = switch (o) {
-    case Integer i && i > 10 -> String.format("a large Integer %d", i);
-    case Integer i           -> String.format("a small Integer %d", i);
-};
-
-// 编译错误 - 第二个条件已包含在第一个条件分支中
-String formatted = switch (o) {
-    case Integer i           -> String.format("a small Integer %d", i);
-    case Integer i && i > 10 -> String.format("a large Integer %d", i);
-    default                  -> "something else";
-};
-```
-
-这个**预览**特性需要通过 `--enable-preview` 标记来显式开启。当然我们试目以待吧，因为更多的特性将要到来：[JEP405](https://openjdk.java.net/jeps/405) 针对 Java 18 ，旨在带来可用于解构的数组模式和记录类模式。
-
 
 
 ## 记录类
@@ -395,14 +455,14 @@ public static void recordSerializationExample() throws Exception {
 
 注意这里不再需要定义 serialVersionUID 了，因为记录类抛弃了对 serialVersionUID 比对的要求。
 
-参考来源[^5]：
+参考来源：
 
 - [Inside Java Podcast Episode 4: “Record Classes” with Gavin Bierman](https://inside.java/2020/10/05/podcast-004/)
 - [Inside Java Podcast Episode 14: “Records Serialization” with Julia Boes and Chris Hegarty](https://inside.java/2021/03/08/podcast-014/)
 - [Towards Better Serialization - Brian Goetz, June 2019](https://cr.openjdk.java.net/~briangoetz/amber/serialization.html)
 - [Record Serialization](https://docs.oracle.com/en/java/javase/16/docs/specs/records-serialization.html)
 
-### ⚠️ 技巧：使用本地记录类来构建中间转化变量
+### ⚠️ 提示：使用本地记录类来构建中间转化变量
 
 复杂的数据转换需要我们构建中间变量。在 Java 16 之前，典型方案是依赖于 Pair 或三方库里相似的 holder 类，再或者是自己定义（可能是静态内部）类来承载数据。
 
@@ -427,7 +487,7 @@ public List<Product> findProductsWithMostSaving(List<Product> products) {
 
 除了记录类外，这个改进也适用于本地枚举甚至接口。
 
-### ⚠️ 技巧：检查你用的类库
+### ⚠️ 提示：检查你用的类库
 
 **记录类没有遵循 [JavaBeans](https://www.oracle.com/java/technologies/javase/javabeans-spec.html) 的约定**：
 
@@ -446,7 +506,6 @@ public List<Product> findProductsWithMostSaving(List<Product> products) {
 我的建议是，**在使用记录类前先升级并检查使用的工具库**，避免意外之喜，但大体上来说，可以认为流行的工具库已经涵盖了大部分特性。
 
 参看我在 [Github 上关于记录类的工具库集成试验](https://github.com/dodie/java-tutorials/tree/master/working-with-structured-data)。
-
 
 
 ## instanceof 模式匹配
@@ -551,7 +610,7 @@ if (obj is String) {
 
 至于 Java 的模式变量，是确保向后兼容性的手段。因为改变 obj instanceof String 中 obj 的类型也就意味着，在其被用作重载方法参数的时候，调用可能会被解析成这个方法的不同版本。
 
-### ⚠️ 技巧：敬请关注更新
+### ⚠️ 提示：敬请关注更新
 
 模式匹配在当下看来可能没什么大不了的，但很快会有更多有意思的特性发布。
 
@@ -580,7 +639,6 @@ return switch (o) {
 ```
 
 现在这两个提议都还在备选状态，未明确其具体搭载的版本号，希望能尽早看到其预览版本发布。
-
 
 
 ## 文本块
@@ -679,19 +737,19 @@ var greeting = """
     """.formatted("world");
 ```
 
-参考来源[^5]：
+参考来源：
 
 - [Programmer’s Guide To Text Blocks](https://cr.openjdk.java.net/~jlaskey/Strings/TextBlocksGuide_v11.html)
 - [Definitive Guide To Text Blocks In Java 13](https://nipafx.dev/java-13-text-blocks#)
 - [Java Text Blocks - Bealdung](https://www.baeldung.com/java-text-blocks)
 
-### ⚠️ 技巧：保留结尾空格
+### ⚠️ 提示：保留结尾空格
 
 在文本块的结尾空格会被忽略掉。这通常不是问题，除非在特定的场景，比如在单元测试时一个方法的执行结果需要和一个基准值做比较。
 
 如果是需要考虑这些的场景时，这行结尾需要添加 `\s` 或 `\t`，而不是空格或者是制表符。
 
-### ⚠️ 技巧：正确处理 Windows 的换行符
+### ⚠️ 提示：正确处理 Windows 的换行符
 
 [换行](https://en.wikipedia.org/wiki/Newline)在 Unix 和 Windows 下有着不同的控制符。前者使用单一的换行符（`\n`），而后者多使用了回车符（`\r\n`）。
 
@@ -706,12 +764,11 @@ Files.writeString(Paths.get("<PATH_TO_FILE>"), """
 
 如果使用一个仅兼容 Windows 换行符的软件（如 Notepad）打开这样的文件，会单单只显示一行。如果你旨在兼容 Windows 系统，请确保使用正确的换行符，比方说使用 `Stirng::replace` 来替换每一个 `"\n"` 字符为 `"\r\n"`。
 
-### ⚠️ 技巧：关注缩进的一致性
+### ⚠️ 提示：关注缩进的一致性
 
 文本块在任意类型的缩进下都能胜任：制表符、空格或者两者混用。但每行使用一致的缩进很重要，否则意外的缩进不会被移除。
 
 大多数文本编辑器都提供了自动格式化，且在你敲击回车键时会自动添加缩进。使用最新版本的编辑器来确保它们能正确处理文本块，还有就是避免使用错误的缩进。
-
 
 
 ## 包含有用信息的空指针异常
@@ -759,14 +816,13 @@ Exception in thread "main" java.lang.NullPointerException:
 
 当前**有用信息的空指针这一特性默认关闭**，必须加上 `-XX:+ShowCodeDetailsInExceptionMessages` 标记来手动开启。
 
-### ⚠️ 技巧：检查你的工具链
+### ⚠️ 提示：检查你的工具链
 
 当你升级到 Java 15 时，检查你的应用和基础设施并确保以下几点：
 
 - 大小写敏感到变量命名不会出现在日志文件和网页服务器响应中
 - 日志分析工具能处理新的消息格式
 - 构建额外细节的额外开销是有必要的
-
 
 
 ## Switch 表达式
@@ -851,7 +907,7 @@ switch (day) {
 
 鉴于以上所有原因，更偏向于使用 switch 表达式而不是 switch 语句，能利于产出更多可维护的代码。
 
-### ⚠️ 技巧：使用箭头语法
+### ⚠️ 提示：使用箭头语法
 
 switch 表达式中 `case` 不仅能使用类似于 lambda 表达式中箭头形式，还能配合 `yeild` 关键字**使用类似于以往 switch 语句中的冒号形式**：
 
@@ -871,7 +927,6 @@ int result = switch (s) {
 - 所有分支共享一个作用域
 
 我的意见？不要使用这种形式，而是使用箭头形式的 switch 表达式，这样能获取所有好处。
-
 
 
 ## 局部变量类型推断
@@ -902,7 +957,7 @@ MyAwesomeClass awesome = new MyAwesomeClass();
 
 在很多的情况下，这个特性确实能提升代码质量。但有时候继续使用显式的类型声明反而是更推崇的。我们来看几个使用 `var` 替换类型声明导致问题的例子。
 
-### ⚠️ 技巧：时刻考虑可读性
+### ⚠️ 提示：时刻考虑可读性
 
 第一个情形是，当在源码中移除显式的类型信息，会影响可读性。
 
@@ -940,7 +995,7 @@ private void longerMethod() {
 
 如果这儿有显式的类型声明，弄清 `dayOfWeek` 对象是什么类型就很容易。现在有了 `var` ，读者首先得找出 `date` 对象的类型，还要搞清 `getDayOfWeek` 方法做了什么。要是有一个 IDE，这一切都很轻松，但是仅仅是快速浏览代码，这就没那么容易了。
 
-### ⚠️ 技巧：注意保留重要的类型信息
+### ⚠️ 提示：注意保留重要的类型信息
 
 第二个情形是，使用 `var` 消除了所有可用的类型信息，甚至导致无法被推断。在绝大多数情形下，这些问题能被 Java 编译器捕获。比如，`var` 不能针对 lambda 和方法引用进行推断，因为编译器依赖于表达式左边的声明来确定类型。
 
@@ -978,7 +1033,7 @@ double d = 1;
 
 在没有显式类型声明的情况下，上面的所有变量都会被推断为整型。在处理基本类型时，要么使用类型字面量（比如 `1L`），要么就完全避免使用 `var` 。
 
-### **⚠️ 技巧：确保阅读官方的代码风格指南**
+### **⚠️ 提示：确保阅读官方的代码风格指南**
 
 什么时候使用类型推断完全取决于你，但确保它不会影响可读性和正确性。经验之谈，保持一个良好的编程实践，比如不错的命名和缩小局部变量的作用域肯定是很有帮助的。确保阅读官方针对 `var` 的[代码风格指南](https://openjdk.java.net/projects/amber/LVTIstyle.html)和[常见问题](https://openjdk.java.net/projects/amber/LVTIFAQ.html)。
 
@@ -988,12 +1043,11 @@ double d = 1;
 
 当前，`var` 还没有相应的单一「关键字」来声明不可变变量（比如 `val` 或 `const`）。希望未来的版本中会支持，在那之前，我们可以使用 `final var` 。
 
-参考来源[^5]：
+参考来源：
 
 - [First Contact With ‘var’ In Java 10](https://blog.codefx.org/java/java-10-var-type-inference/)
 - [26 Items for Dissecting Java Local Variable Type Inference (Var Type)](https://dzone.com/articles/var-work-in-progress)
 - [Java 10: Local Variable Type Inference](https://www.journaldev.com/19871/java-10-local-variable-type-inference)
-
 
 
 ## 接口中允许私有方法
@@ -1003,7 +1057,6 @@ double d = 1;
 从 Java 8 开始，在接口中添加默认方法成为可能。到 Java 9 中，默认方法甚至能调用私有方法，这既满足代码复用的需求，但又不对外暴露相应逻辑。
 
 虽然这不是个大的改进，但这对整理默认方法中的代码小有帮助。
-
 
 
 ## 匿名内部类的钻石操作符
@@ -1025,7 +1078,6 @@ List<Integer> numbers = new ArrayList<>() {
     // ...
 }
 ```
-
 
 
 ## try-with-resources 语句中允许使用 effectively-final 变量
@@ -1080,7 +1132,7 @@ try (br1; br2) {
 
 在这个例子中，变量的初始化和其注册到 `try-with-resources` 结构中的步骤已经分离开。
 
-### **⚠️ 技巧：当心已释放的资源**
+### **⚠️ 提示：当心已释放的资源**
 
 有一点需要警惕在心，已被 `try-with-resources` 释放的资源是可能会被再次引用的，但这几乎都会失败：
 
@@ -1093,17 +1145,19 @@ br.readLine(); // Boom!
 ```
 
 
-
 ## 下划线不再是合法变量名
 
 **开始支持版本：** [JDK 9](https://openjdk.java.net/jeps/213) (Milling Project Coin)
 
-[在 Java 8 中](https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8005852)，变量名为下划线（`_`）时编译器会抛出警告。Java 9 更进一步，将单个下划线字符视为非法变量名，保留给未来作为特殊语义做准备：
+[在 Java 8 中](https://bugs.java.com/bugdatabase/view_bug.do?bug_id=8005852)，变量名为下划线（`_`）时编译器会抛出警告。Java 9 更进一步，将单个下划线字符视为非法变量名，保留给未来作为特殊语义做准备。
+
+注意：这与[匿名变量](#匿名模式和匿名变量)相应变化，这是 Java 21 中的预览功能，允许下划线以表达特殊含义。
 
 ```java
-int _ = 10; // 编译错误
+// Java 9+ 编译错误
+// 除非运行在 Java 21 并开启预览特性
+int _ = 10; 
 ```
-
 
 
 ## 改进的警告
@@ -1117,20 +1171,18 @@ int _ = 10; // 编译错误
 还有，自从 [Java 9](https://openjdk.java.net/jeps/211) 以后，编译器不再为引入废弃的类型报出警告。因为这些警告已经在调用的地方展示了，所以没有太多实际有价值的信息，也显得冗余。
 
 
-
 ## 总结
 
 这篇文章介绍了 Java 8 以后的语言改进。随着新的每 6 个月一次的快速发布周期，更多的变化被引入，保持关注 Java 平台的变化就更加重要了。
 
 
-
-
+---
 
 译者注：
 
 [^1]: [JDK Enhancement Proposal](https://openjdk.java.net/jeps/0), JDK 改进提议，JDK 的重大修改/特性几乎都以此提出，类似于 ECMA 的 [TC39 Proposal](https://github.com/tc39/proposals)；
 
-[^2]: 此篇文章也有翻译：[Java 9 到 16 的语言和 JVM 特性更新分类清单](https://nanova.me/2021/04/04/java-lang-jvm-updates)
+[^2]: 此篇文章也有翻译：[Java 9 到 16 的语言和 JVM 特性更新分类清单](https://nanova.me/posts/java-lang-jvm-updates)
 [^3]: guards，翻译参考：https://en.wikipedia.org/wiki/Guard_(computer_science)
 [^4]: 译录类的构造方法有：*canonical constructor*（编译器会自动生成） 和 *compact constructors*（没有入参括号，默认会调用标准构造方法，也会沿用全部的成员变量作为入参） 以及 *alternative constructor*（可以自定义入参，必须先调用前面两种构造方法），参考：[Records Come to Java (oracle.com)](https://blogs.oracle.com/javamagazine/records-come-to-java#anchor_4)
 [^5]: 这里指的是原文的参考来源，下同
